src/snapshots/aidl_parser__rules__tests__enum.snap
---
source: src/rules.rs
expression: res

---
Enum(
  name: "Paprika",
  elements: [
    EnumElement(
      name: "ELEMENT1",
      value: Some("3"),
      doc: Some("element1 documentation"),
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT2",
      value: Some("\"quattro\""),
      doc: None,
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT3",
      value: None,
      doc: None,
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  annotations: [],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
