src/snapshots/aidl_parser__rules__tests__enum_with_errors.snap
---
source: src/rules.rs
expression: res

---
Enum(
  name: "Paprika",
  elements: [
    EnumElement(
      name: "ELEMENT1",
      value: Some("3"),
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT3",
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  full_range: "...",
  symbol_range: "...",
)
