src/snapshots/aidl_parser__rules__tests__enum_with_trailing_comma.snap
---
source: src/rules.rs
expression: res

---
Enum(
  name: "Paprika",
  elements: [
    EnumElement(
      name: "ELEMENT1",
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT2",
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  full_range: "...",
  symbol_range: "...",
)
