src/snapshots/aidl_parser__rules__tests__field.snap
---
source: src/rules.rs
assertion_line: 485
expression: res

---
Field(
  name: "fieldName",
  type: Type(
    name: "TypeName",
    kind: custom,
    symbol_range: "...",
    full_range: "...",
  ),
  symbol_range: "...",
  full_range: "...",
)
