src/snapshots/aidl_parser__rules__tests__field_with_annotation.snap
---
source: src/rules.rs
assertion_line: 511
expression: res

---
Field(
  name: "fieldName",
  type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  value: Some("\"field value\""),
  annotations: [
    Annotation(
      name: "@AnnotationName",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
)
