src/snapshots/aidl_parser__rules__tests__field_with_javadoc.snap
---
source: src/rules.rs
assertion_line: 503
expression: res

---
Field(
  name: "fieldName",
  type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  doc: Some("Field documentation"),
  symbol_range: "...",
  full_range: "...",
)
