src/snapshots/aidl_parser__rules__tests__field_with_value.snap
---
source: src/rules.rs
assertion_line: 492
expression: res

---
Field(
  name: "fieldName",
  type: Type(
    name: "TypeName",
    kind: custom,
    symbol_range: "...",
    full_range: "...",
  ),
  value: Some("\"field value\""),
  symbol_range: "...",
  full_range: "...",
)
