src/snapshots/aidl_parser__rules__tests__import.snap
---
source: src/rules.rs
expression: res

---
Import(
  path: "x.y",
  name: "z",
  symbol_range: "...",
)
