src/snapshots/aidl_parser__rules__tests__interface.snap
---
source: src/rules.rs
expression: res
---
Interface(
  oneway: false,
  name: "Potato",
  elements: [
    const(Const(
      name: "const1",
      type: Type(
        name: "int",
        kind: primitive,
        symbol_range: "...",
        full_range: "...",
      ),
      value: "1",
      doc: Some("const1 documentation"),
      symbol_range: "...",
      full_range: "...",
    )),
    method(Method(
      oneway: false,
      name: "method1",
      return_type: Type(
        name: "String",
        kind: string,
        symbol_range: "...",
        full_range: "...",
      ),
      args: [],
      doc: Some("method1 documentation"),
      symbol_range: "...",
      full_range: "...",
      transact_code_range: "...",
      oneway_range: "...",
    )),
    const(Const(
      name: "const2",
      type: Type(
        name: "String",
        kind: string,
        symbol_range: "...",
        full_range: "...",
      ),
      value: "\"two\"",
      symbol_range: "...",
      full_range: "...",
    )),
    method(Method(
      oneway: false,
      name: "method2",
      return_type: Type(
        name: "int",
        kind: primitive,
        symbol_range: "...",
        full_range: "...",
      ),
      args: [],
      symbol_range: "...",
      full_range: "...",
      transact_code_range: "...",
      oneway_range: "...",
    )),
  ],
  full_range: "...",
  symbol_range: "...",
)
