src/snapshots/aidl_parser__rules__tests__interface_with_annotation.snap
---
source: src/rules.rs
expression: res

---
Interface(
  name: "Potato",
  elements: [],
  annotations: [
    Annotation(
      name: "@InterfaceAnnotation1",
      key_values: {},
    ),
    Annotation(
      name: "@InterfaceAnnotation2",
      key_values: {},
    ),
  ],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
